#17 - I think i fixed alignment issue with the lesson image and label on the card page

--- a/Accio.Presentation.Web/wwwroot/css/accio.card.css
+++ b/Accio.Presentation.Web/wwwroot/css/accio.card.css
@@ -195,3 +195,8 @@
     opacity: 0.75;
     color: var(--grayGargoyle);
 }
+
+.card-lesson-image {
+    /* Tachons is screwing up vertical alignment between the image and a label. This isn't ideal, but it makes it mostly work. */
+    margin-top: 3px;
+}
